--- a/App.config
+++ b/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+	<system.web>
+		<globalization culture="es-ES" uiCulture="es-ES" />
+	</system.web>
 </configuration>
